{
    "name": "NewInputManager",
    "maps": [
        {
            "name": "MatchScene",
            "id": "08cbc888-dd07-4142-9060-a75baf96eb0c",
            "actions": [
                {
                    "name": "GenreateMap",
                    "id": "1e80fe2d-3382-4863-b39d-2beb57ddd0ac",
                    "expectedControlLayout": "",
                    "bindings": []
                },
                {
                    "name": "Back",
                    "id": "c33c8066-9a1e-4de8-9326-413a4822df85",
                    "expectedControlLayout": "",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "path": "<Keyboard>/g",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";PC",
                    "action": "GenreateMap",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PC",
                    "action": "Back",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mobile",
            "basedOn": "",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "PC",
            "basedOn": "",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}